// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse 1`] = `
{
  "End": {
    "Col": 17,
    "Line": 1,
    "Offset": 16,
  },
  "Last": [],
  "Name": "",
  "Pos": {
    "Col": 3,
    "Line": 1,
    "Offset": 2,
  },
  "Stmt": [
    {
      "Background": false,
      "Cmd": {
        "End": {
          "Col": 17,
          "Line": 1,
          "Offset": 16,
        },
        "Pos": {
          "Col": 3,
          "Line": 1,
          "Offset": 2,
        },
      },
      "Comments": [],
      "Coprocess": false,
      "End": {
        "Col": 17,
        "Line": 1,
        "Offset": 16,
      },
      "Negated": false,
      "Pos": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Position": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Redirs": [],
      "Semicolon": {
        "Col": 0,
        "Line": 0,
        "Offset": 0,
      },
    },
  ],
}
`;

exports[`parse 2`] = `
{
  "End": {
    "Col": 16,
    "Line": 1,
    "Offset": 15,
  },
  "Last": [],
  "Name": "",
  "Pos": {
    "Col": 3,
    "Line": 1,
    "Offset": 2,
  },
  "Stmt": [
    {
      "Background": false,
      "Cmd": {
        "End": {
          "Col": 16,
          "Line": 1,
          "Offset": 15,
        },
        "Pos": {
          "Col": 3,
          "Line": 1,
          "Offset": 2,
        },
      },
      "Comments": [],
      "Coprocess": false,
      "End": {
        "Col": 16,
        "Line": 1,
        "Offset": 15,
      },
      "Negated": false,
      "Pos": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Position": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Redirs": [],
      "Semicolon": {
        "Col": 0,
        "Line": 0,
        "Offset": 0,
      },
    },
  ],
}
`;

exports[`parse 3`] = `
{
  "End": {
    "Col": 20,
    "Line": 1,
    "Offset": 19,
  },
  "Last": [],
  "Name": "",
  "Pos": {
    "Col": 3,
    "Line": 1,
    "Offset": 2,
  },
  "Stmt": [
    {
      "Background": false,
      "Cmd": {
        "End": {
          "Col": 20,
          "Line": 1,
          "Offset": 19,
        },
        "Pos": {
          "Col": 3,
          "Line": 1,
          "Offset": 2,
        },
      },
      "Comments": [],
      "Coprocess": false,
      "End": {
        "Col": 20,
        "Line": 1,
        "Offset": 19,
      },
      "Negated": false,
      "Pos": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Position": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Redirs": [],
      "Semicolon": {
        "Col": 0,
        "Line": 0,
        "Offset": 0,
      },
    },
  ],
}
`;

exports[`parse 4`] = `
{
  "End": {
    "Col": 20,
    "Line": 1,
    "Offset": 19,
  },
  "Last": [],
  "Name": "",
  "Pos": {
    "Col": 3,
    "Line": 1,
    "Offset": 2,
  },
  "Stmt": [
    {
      "Background": false,
      "Cmd": {
        "End": {
          "Col": 20,
          "Line": 1,
          "Offset": 19,
        },
        "Pos": {
          "Col": 3,
          "Line": 1,
          "Offset": 2,
        },
      },
      "Comments": [],
      "Coprocess": false,
      "End": {
        "Col": 20,
        "Line": 1,
        "Offset": 19,
      },
      "Negated": false,
      "Pos": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Position": {
        "Col": 3,
        "Line": 1,
        "Offset": 2,
      },
      "Redirs": [],
      "Semicolon": {
        "Col": 0,
        "Line": 0,
        "Offset": 0,
      },
    },
  ],
}
`;

exports[`print 1`] = `
"Hello World ! d
"
`;

exports[`print 2`] = `[TypeError: \`originalText\` is required for now, hope we will find better solution later]`;
